# usms_seed

./: .gitignore  README.md  pyproject.toml
data/: data_list.csv  meet_list.csv  meets_10to20_list.csv
notebooks/: data_explore.ipynb  initial.ipynb
usms_seed/application/: appdata.py  myapp.py
usms_seed/application/pages/: about.py  ages.py
usms_seed/data/: clean.py  extract.py  parallel_scrape.py  pipelines.py  scrape.py  transforms.py
