[tool.poetry]
name = "usms-seed"
version = "0.1.0"
description = ""
authors = ["G Adam Cox <gadamc@gmail.com>"]
readme = "README.md"
packages = [{include = "usms_seed"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pandas = "^2.0.3"
click = "^8.1.6"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
streamlit = "^1.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
